--- a/eTools Ultimate/Resources/Translations.de-DE.resx
+++ b/eTools Ultimate/Resources/Translations.de-DE.resx
@@ -2150,4 +2150,162 @@
   <data name="Files format" xml:space="preserve">
     <value>Dateiformat</value>
   </data>
+  <data name="Misc" xml:space="preserve">
+    <value>Verschiedenes</value>
+  </data>
+  <data name="Navigate to the misc tools page." xml:space="preserve">
+    <value>Navigiere zur Seite für verschiedene Tools.</value>
+  </data>
+  <data name="Misc Tools" xml:space="preserve">
+    <value>Verschiedene Tools</value>
+  </data>
+  <data name="Find and manage unused assets" xml:space="preserve">
+    <value>Finde und verwalte ungenutzte Assets</value>
+  </data>
+  <data name="Find Unused Models &amp; Textures" xml:space="preserve">
+    <value>Ungenutzte Modelle &amp; Texturen finden</value>
+  </data>
+  <data name="Scan dependencies and list assets not referenced anywhere" xml:space="preserve">
+    <value>Abhängigkeiten scannen und Assets auflisten, die nirgendwo referenziert werden</value>
+  </data>
+  <data name="Status" xml:space="preserve">
+    <value>Status</value>
+  </data>
+  <data name="Scanning for unused assets..." xml:space="preserve">
+    <value>Suche nach ungenutzten Assets...</value>
+  </data>
+  <data name="Scanning models..." xml:space="preserve">
+    <value>Scanne Modelle...</value>
+  </data>
+  <data name="Scanning textures..." xml:space="preserve">
+    <value>Scanne Texturen...</value>
+  </data>
+  <data name="Scanning sounds..." xml:space="preserve">
+    <value>Scanne Sounds...</value>
+  </data>
+  <data name="Scan completed. Found {0} unused assets." xml:space="preserve">
+    <value>Scan abgeschlossen. {0} ungenutzte Assets gefunden.</value>
+  </data>
+  <data name="Total Size Before" xml:space="preserve">
+    <value>Gesamtgröße Vorher</value>
+  </data>
+  <data name="After" xml:space="preserve">
+    <value>Nachher</value>
+  </data>
+  <data name="Scan Assets" xml:space="preserve">
+    <value>Assets scannen</value>
+  </data>
+  <data name="Select All" xml:space="preserve">
+    <value>Alle auswählen</value>
+  </data>
+  <data name="Clear Selection" xml:space="preserve">
+    <value>Auswahl löschen</value>
+  </data>
+  <data name="Delete Selected" xml:space="preserve">
+    <value>Ausgewählte löschen</value>
+  </data>
+  <data name="Search by name, path, or type..." xml:space="preserve">
+    <value>Suche nach Name, Pfad oder Typ...</value>
+  </data>
+  <data name="{0} assets found" xml:space="preserve">
+    <value>{0} Assets gefunden</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>Typ</value>
+  </data>
+  <data name="File Name" xml:space="preserve">
+    <value>Dateiname</value>
+  </data>
+  <data name="Path" xml:space="preserve">
+    <value>Pfad</value>
+  </data>
+  <data name="Size" xml:space="preserve">
+    <value>Größe</value>
+  </data>
+  <data name="Last Modified" xml:space="preserve">
+    <value>Zuletzt geändert</value>
+  </data>
+  <data name="Actions" xml:space="preserve">
+    <value>Aktionen</value>
+  </data>
+  <data name="Scan completed" xml:space="preserve">
+    <value>Scan abgeschlossen</value>
+  </data>
+  <data name="Found {0} unused assets totaling {1}." xml:space="preserve">
+    <value>{0} ungenutzte Assets mit insgesamt {1} gefunden.</value>
+  </data>
+  <data name="Scan failed" xml:space="preserve">
+    <value>Scan fehlgeschlagen</value>
+  </data>
+  <data name="No selection" xml:space="preserve">
+    <value>Keine Auswahl</value>
+  </data>
+  <data name="Please select assets to delete." xml:space="preserve">
+    <value>Bitte wählen Sie Assets zum Löschen aus.</value>
+  </data>
+  <data name="Delete selected assets" xml:space="preserve">
+    <value>Ausgewählte Assets löschen</value>
+  </data>
+  <data name="Are you sure you want to delete {0} selected assets? This action cannot be undone." xml:space="preserve">
+    <value>Sind Sie sicher, dass Sie {0} ausgewählte Assets löschen möchten? Diese Aktion kann möglicherweise nicht rückgängig gemacht werden.</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Löschen</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Abbrechen</value>
+  </data>
+  <data name="Assets deleted" xml:space="preserve">
+    <value>Assets gelöscht</value>
+  </data>
+  <data name="Successfully deleted {0} assets, freeing {1}." xml:space="preserve">
+    <value>Erfolgreich {0} Assets gelöscht, {1} freigegeben.</value>
+  </data>
+  <data name="Deletion failed" xml:space="preserve">
+    <value>Löschen fehlgeschlagen</value>
+  </data>
+  <data name="Delete asset" xml:space="preserve">
+    <value>Asset löschen</value>
+  </data>
+  <data name="Are you sure you want to delete '{0}'? This action cannot be undone." xml:space="preserve">
+    <value>Sind Sie sicher, dass Sie '{0}' löschen möchten? Diese Aktion kann möglicherweise nicht rückgängig gemacht werden.</value>
+  </data>
+  <data name="Asset deleted" xml:space="preserve">
+    <value>Asset gelöscht</value>
+  </data>
+  <data name="Successfully deleted '{0}'." xml:space="preserve">
+    <value>Erfolgreich '{0}' gelöscht.</value>
+  </data>
+  <data name="Deletion Log" xml:space="preserve">
+    <value>Löschprotokoll</value>
+    <comment>Deletion log window title</comment>
+  </data>
+  <data name="View and restore deleted assets" xml:space="preserve">
+    <value>Gelöschte Assets anzeigen und wiederherstellen</value>
+    <comment>Deletion log window subtitle</comment>
+  </data>
+  <data name="Date" xml:space="preserve">
+    <value>Datum</value>
+    <comment>Date column header</comment>
+  </data>
+  <data name="Action" xml:space="preserve">
+    <value>Aktion</value>
+    <comment>Action column header</comment>
+  </data>
+  <data name="File Path" xml:space="preserve">
+    <value>Dateipfad</value>
+    <comment>File path column header</comment>
+  </data>
+  <data name="Target Path" xml:space="preserve">
+    <value>Zielpfad</value>
+    <comment>Target path column header</comment>
+  </data>
+  <data name="Deleted By" xml:space="preserve">
+    <value>Gelöscht von</value>
+    <comment>Deleted by column header</comment>
+  </data>
+  <data name="Refresh" xml:space="preserve">
+    <value>Aktualisieren</value>
+    <comment>Refresh button text</comment>
+  </data>
 </root>
