Add asset type filter and improve file size formatting
Introduces asset type filtering and total asset count display in MiscViewModel and translations. File size formatting is now more readable (B, Kb, Mb, Gb). PatchNotes resources updated with new changelog entries and test data. Deletion log dialog integration and UI consistency improvements included.

--- a/eTools Ultimate/Resources/Translations.de-DE.resx
+++ b/eTools Ultimate/Resources/Translations.de-DE.resx
@@ -2308,4 +2308,12 @@
     <value>Aktualisieren</value>
     <comment>Refresh button text</comment>
   </data>
+  <data name="Filter by type..." xml:space="preserve">
+    <value>Nach Typ filtern...</value>
+    <comment>Filter ComboBox placeholder</comment>
+  </data>
+  <data name="Total: {0}" xml:space="preserve">
+    <value>Gesamt: {0}</value>
+    <comment>Total assets count</comment>
+  </data>
 </root>
