--- a/eTools Ultimate/Resources/Translations.fr-FR.resx
+++ b/eTools Ultimate/Resources/Translations.fr-FR.resx
@@ -2234,4 +2234,12 @@
     <value>Actualiser</value>
     <comment>Refresh button text</comment>
   </data>
+  <data name="Filter by type..." xml:space="preserve">
+    <value>Filtrer par type...</value>
+    <comment>Filter ComboBox placeholder</comment>
+  </data>
+  <data name="Total: {0}" xml:space="preserve">
+    <value>Total : {0}</value>
+    <comment>Total assets count</comment>
+  </data>
 </root>
